--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,32 @@
 .App {
+  /* background-color: #09d3ac; */
   text-align: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25)),
+    url('./img/background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  height: 100vmax;
 }
 
-.App-logo {
-  height: 40vmin;
+.static-logo {
+  height: 20vmin;
+}
+
+.animated-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 20vmin;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
