--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,27 @@
-.App {
-  /* background-color: #09d3ac; */
+.html,
+body {
+  background-color: #09d3ac;
   text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25)),
-    url('./img/background.jpg') no-repeat center center fixed;
-  background-size: cover;
-  height: 100vmax;
+  height: 100%;
+  /* background: linear-gradient(rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25)), */
+  /* url('/background.jpg') no-repeat center center fixed; */
+  /* background-size: cover; */
+}
+
+.Grid {
+  margin: 5%;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
 }
 
 .static-logo {
   height: 20vmin;
+  margin-top: 1rem;
 }
 
 .animated-logo {
+  margin-top: 1rem;
   animation: App-logo-spin infinite 20s linear;
   height: 20vmin;
 }
